added code conduct

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@
 - title: Opportunities
   url: /opportunities/
 
-- title:  Photos
-  url: /photos/
+- title: Team
+  url: /team/
 
 - title: Contact
   url: /contact/
