--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ title: "Genomics and Environmental Research in Microbial Systems"
 description: ""
 baseurl: "" # the subpath of your site, e.g. "/blog"
 url:  "www.germslab.org" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-logo: "/images/for-web.gif" # path of site logo, e.g. "/images/logo.png"
+logo: "/images/GB-LOGO-RGB_MAIN-STACKED.svg" # path of site logo, e.g. "/images/logo.png"
 date_format: "%B %-d, %Y"
 read_time: # reading time estimates, e.g. true
 words_per_minute: # 200
