--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: mmistakes/so-simple-theme
 locale: en-US
 title: "Genomics and Environmental Research in Microbial Systems"
-description: ""
+description: "Research Website for GERMS"
 baseurl: "" # the subpath of your site, e.g. "/blog"
 url:  "www.germslab.org" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: "/images/GB-LOGO-RGB_MAIN-STACKED.svg" # path of site logo, e.g. "/images/logo.png"
