--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-paginate
-
+  - jekyll-github-metadata
 
 # Front Matter Defaults
 defaults:
